# tagit

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindDWARF.cmake  FindTaglib.cmake  SetFlags.cmake
src/tagit/: CMakeLists.txt  TagIt.cpp
src/tagitcommon/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
src/tagitcommon/audio/: AACFile.cpp  AACFile.h  ALACFile.cpp  ALACFile.h  AudioFile.cpp  AudioFile.h  AudioFileModel.cpp  AudioFileModel.h  FLACFile.cpp  FLACFile.h  MP3File.cpp  MP3File.h  Utils.cpp  Utils.h  VorbisFile.cpp  VorbisFile.h  WaveFile.cpp  WaveFile.h
src/tagitcommon/fs/: Environment.cpp  Environment.h  FS.cpp  FS.h  TemporaryStorage.cpp  TemporaryStorage.h
src/tagitcommon/io/: MemoryMappedFile.cpp  MemoryMappedFile.h
src/tagitcommon/tag/: Tag.cpp  Tag.h  TaggedFile.h
src/tagitcommon/ui/: AudioTagWidget.cpp  AudioTagWidget.h  PathInputWidget.cpp  PathInputWidget.h
src/tagitcommon/util/: Bitwise.cpp  Bitwise.h  ConstexprString.h  Errno.cpp  Errno.h  ScopeExit.cpp  ScopeExit.h  String.cpp  String.h  VariantUtils.h  asciiFilenameTranslationMap.cpp  asciiFilenameTranslationMap.h  visualAsciiTranslationMap.cpp  visualAsciiTranslationMap.h
src/test/: CMakeLists.txt  TagItTest.cpp  data.qrc
src/test/audio/: AudioFileTest.cpp  AudioFileTest.h
src/test/data/: aac-tagged.m4a  aac.m4a  alac-tagged.m4a  alac.m4a  flac-tagged.flac  flac.flac
src/test/fs/: EnvironmentTest.cpp  EnvironmentTest.h  FSTest.cpp  FSTest.h  TemporaryStorageTest.cpp  TemporaryStorageTest.h
src/test/io/: MemoryMappedFileTest.cpp  MemoryMappedFileTest.h
src/test/tag/: TagTest.cpp  TagTest.h
src/test/util/: BitwiseTest.cpp  BitwiseTest.h  ErrnoTest.cpp  ErrnoTest.h  ScopeExitTest.cpp  ScopeExitTest.h  StringTest.cpp  StringTest.h
